# Warehouse_Pineapples

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Pineapples/: dbt_project.yml
Pineapples/macros/: discount_calculator.sql  generate_schema_name.sql
Pineapples/models/marts/base/: accommodations_name.sql  dim_accommodations_name.sql  dim_confirmed_bookings.sql
Pineapples/models/marts/commercial/: fct_owner_payment.sql  owner_payment.sql
Pineapples/models/marts/custumer_care/: fct_montly_review_goal.sql  montly_review_goal.sql  reviews_customer_care.sql
Pineapples/models/marts/finance/: checkout_daily.sql  cleaning_per_location.sql  dim_accommodations_enabled_owners.sql  dim_cost_center.sql  dim_occupancy_month.sql  fct_checkout_daily.sql  fct_cleaning_per_location.sql  fct_goal_2025_dashboard.sql  fct_last_minute_revenue.sql  (+8 more)
Pineapples/models/staging/: __sources.yml  stg_accmmodations.md  stg_accommodations.md  stg_accommodations.sql  stg_accommodations.yml  stg_accommodations_margin.sql  stg_airbnb_reviews.md  stg_airbnb_reviews.sql  stg_airbnb_reviews.yml  stg_beyond_booking_update.sql  stg_beyond_booking_update.yml  stg_beyond_detailed_data.md  stg_beyond_detailed_data.sql  stg_beyond_detailed_data.yml  stg_bookings.md  stg_bookings.sql  stg_bookings.yml  stg_bookings_extras.md  stg_bookings_extras.sql  stg_bookings_extras.yml  stg_owner_service.md  stg_owner_service.sql  stg_owner_service.yml  stg_owners.md  stg_owners.sql  stg_owners.yml  stg_reviews.md  stg_reviews.sql  stg_reviews.yml
Pineapples/tests/: test_postive_value.sql
(+29 files in other folders)
